--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>2.1.5.RELEASE</version>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -38,7 +31,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
+  <scm>
+	  <developerConnection>scm:git:git@github.com:nidhal-ferjani/sfg-pet-clinic.git</developerConnection>
+  </scm>
 </project>
