--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-
 
 	<build>
 		<plugins>
