--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>com.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 
@@ -40,5 +40,6 @@
 	</build>
   <scm>
 	  <developerConnection>scm:git:git@github.com:nidhal-ferjani/sfg-pet-clinic.git</developerConnection>
+    <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 </project>
