--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Fri May 31 15:43:33 GMT+01:00 2019
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:git@github.com\:nidhal-ferjani/sfg-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Fri May 31 15:47:09 GMT+01:00 2019
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.springframework\:pet-clinic-web=0.0.6-SNAPSHOT
+project.dev.com.springframework\:pet-clinic-data=0.0.6-SNAPSHOT
+pushChanges=true
+project.rel.com.springframework\:sfg-pet-clinic=0.0.5
+scm.tag=sfg-pet-clinic-0.0.5
+remoteTagging=true
+project.scm.com.springframework\:pet-clinic-data.empty=true
+project.rel.com.springframework\:pet-clinic-web=0.0.5
+projectVersionPolicyId=default
+project.scm.com.springframework\:pet-clinic-web.empty=true
+scm.url=scm\:git\:git@github.com\:nidhal-ferjani/sfg-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
+project.rel.com.springframework\:pet-clinic-data=0.0.5
+project.scm.com.springframework\:sfg-pet-clinic.tag=HEAD
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.com.springframework\:sfg-pet-clinic=0.0.6-SNAPSHOT
+project.scm.com.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:nidhal-ferjani/sfg-pet-clinic.git
+completedPhase=end-release
