--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.banner.image.location=img-java.jpg
 
 # Internationalization
 spring.messages.basename=messages/messages
+
+#Active Profile
+
+#spring.profiles.active=springdatajpa
