--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <!-- Lombok Project-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
 
